Fixing hero contrast

--- a/styles.css
+++ b/styles.css
@@ -979,7 +979,7 @@ sup {
       display: none;
     }
     #blue {
-        color: #C2EDF4;
+        color: #ffffff;
     }
     
   }
@@ -1013,9 +1013,6 @@ sup {
       .landingContent {
         margin-top: -30vh;
       }
-      /* #blue {
-        color: #C2EDF4;
-      } */
       .row {
         flex-direction: column;
         justify-content: center;
